<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView2"
            android:layout_marginTop="32dp"
            android:src="@drawable/usuario"
            android:contentDescription="@string/ig"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usu_rio"
            android:id="@+id/textView4"
            android:textSize="20sp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/lembrete"
            android:layout_marginEnd="34dp"
            android:contentDescription="@string/notificacao"
            android:layout_below="@+id/textView4"
            android:layout_toStartOf="@+id/btlembrete"
            android:layout_marginTop="29dp" />

        <Button
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/lembrete"
            android:id="@+id/btlembrete"
            android:textSize="15sp"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignStart="@+id/imageView2"
            android:layout_alignEnd="@+id/imageView2"
            android:onClick="chamaTelaLembrete"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/arquivos"
            android:contentDescription="@string/arquivos"
            android:layout_marginRight="22dp"
            android:layout_below="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/calculadora"
            android:contentDescription="@string/calculo"
            android:layout_marginRight="22dp"
            android:layout_below="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4" />

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/calculos"
            android:id="@+id/btcalculo"
            android:textSize="15sp"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_toEndOf="@+id/imageView3"
            android:onClick="chamaTelaCalculadora"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/calendario"
            android:contentDescription="@string/calendar"
            android:layout_marginRight="22dp"
            android:layout_below="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/calend_rio"
            android:id="@+id/btcalendario"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_alignBottom="@+id/imageView6"
            android:onClick="chamaTelaCalendario"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/pessoal"
            android:contentDescription="@string/pessoa"
            android:layout_marginRight="22dp"
            android:layout_below="@+id/imageView6"
            android:layout_alignStart="@+id/imageView6" />

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/pessoal"
            android:id="@+id/btpessoal"
            android:textSize="15sp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_toEndOf="@+id/imageView3"
            android:onClick="chamaTelaAgenda"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arquivos"
            android:id="@+id/btarquivo"
            android:layout_above="@+id/imageView5"
            android:layout_toEndOf="@+id/imageView3"
            android:onClick="chamaTelaArquivos"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:id="@+id/btvolte"
            android:onClick="chamaTelaLongin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>