<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:id="@+id/textView"
            android:layout_marginTop="36dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView2"
            android:layout_marginTop="38dp"
            android:textSize="20sp"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:textSize="20sp"
            android:text="@string/digite_seu_email"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:layout_below="@+id/editText"
            android:layout_alignStart="@+id/editText2"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:textSize="20sp"
            android:text="@string/senhas"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/btesquecer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:id="@+id/btentrar"
            android:textSize="20sp"
            android:background="#007FFF"
            android:textColor="#ffffff"
            android:onClick="chamaTelaUsuario"
            android:layout_below="@+id/editText2"
            android:layout_alignStart="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o_possui_conta_cadastre_se"
            android:id="@+id/btcadastro"
            android:textSize="15sp"
            android:textColor="#007FFF"
            android:layout_below="@+id/btentrar"
            android:layout_alignStart="@+id/editText2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueceu_sua_senha"
            android:id="@+id/btesquecer"
            android:textSize="15sp"
            android:textColor="#007FFF"
            android:layout_below="@+id/btcadastro"
            android:layout_alignEnd="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:id="@+id/btvoltar"
            android:onClick="chamaTelaPrincipal"
            android:layout_below="@+id/editText2"
            android:layout_alignEnd="@+id/editText2" />

    </RelativeLayout>
</LinearLayout>