<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:text="@string/Lembretes"
            android:id="@+id/txtlbt"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/btrecentes"
            android:background="#007FFF"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/todos_os_lembretes"
            android:id="@+id/btlembrete"
            android:textColor="#ffffff"
            android:background="#007FFF"
            android:layout_below="@+id/txtlbt"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/recentes"
            android:id="@+id/btrecentes"
            android:background="#007FFF"
            android:textColor="#ffffff"
            android:layout_alignTop="@+id/btlembrete"
            android:layout_toEndOf="@+id/btlembrete" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Voltar"
            android:id="@+id/button5"
            android:layout_marginBottom="70dp"
            android:onClick="chamaTelaUsuario"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/btlembrete" />

    </RelativeLayout>
</LinearLayout>