<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a06235434.testprojet.MainActivity"
    android:background="#ffffff">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/imglogo"
        android:src="@drawable/logo"
        android:contentDescription="@string/img"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/aluno"
        android:id="@+id/btaluno"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="#007FFF"
        android:textColor="#ffffff"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/imglogo"
        android:layout_centerHorizontal="true"
        android:onClick="chamaTelaLongin"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/professor"
        android:id="@+id/btprof"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="#007FFF"
        android:textColor="#ffffff"
        android:layout_below="@+id/btaluno"
        android:layout_alignStart="@+id/btaluno"
        android:layout_marginTop="68dp"
        android:onClick="chamaTelaLongin"/>
</RelativeLayout>
